# CoachFriend

./: README.md
.claude/: settings.local.json
agent/: .env.example  .env.local.example  .gitignore  agent.py  pyproject.toml
